Made return method more readable in startpage and fixed sidebar

--- a/css/components/header.css
+++ b/css/components/header.css
@@ -2,6 +2,7 @@ header {
   height: 3rem;
   width: 100%;
   background-color: #bebdbf;
+  z-index: 5;
 }
 
 .header-nav {
@@ -30,6 +31,10 @@ header {
   font-size: 2rem;
 }
 
+.userpage-button {
+  width: 100%;
+}
+
 .user-icon {
   display: block;
   position: relative;
@@ -43,3 +48,8 @@ header {
   background-color: #eeeeee;
   cursor: pointer;
 }
+
+@media (max-width: 575.98px) { 
+
+
+ }
